correction overflow

--- a/src/css/backoffice.css
+++ b/src/css/backoffice.css
@@ -1,3 +1,7 @@
 .order img {
     width: 32px;
 }
+
+* {
+    overflow-x: hidden;
+}
